--- a/location/templates/location/index.html
+++ b/location/templates/location/index.html
@@ -7,13 +7,14 @@
 			<div class="col s12 m10 l8 offset-m1 offset-l2">
 			  	<div class="card white">
 					<div class="card-content white-text card-search">
-						  <span class="card-title search-title center">Destino</span>
-						  <div class="row">
+						<span class="card-title search-title center">Destino</span>
+						<div class="row">
 							<form class="col s10 m10 l10 offset-l2 offset-m2 offset-s2">
 							  	<div class="row">
 									<div class="input-field col s8 m10 l10 input-search">
 									  	<i class="material-icons prefix location-icon">edit_location</i>
-									  	<textarea id="icon_prefix2" class="materialize-textarea input-text"></textarea>
+										<textarea id="icon_prefix2" class="materialize-textarea input-text"></textarea>
+										<span class="helper-text red-text"></span>
 									</div>
 							  	</div>
 							</form>
