--- a/location/templates/location/base.html
+++ b/location/templates/location/base.html
@@ -44,7 +44,9 @@
 	  	<div class="row">
 			<div class="col l6 s12">
 		  		<h5 class="white-text logo">HowFar?</h5>
-		  		<p class="grey-text text-lighten-4">Calcule a distância entre qualquer localidade</p>
+				<p class="grey-text text-lighten-4">Calcule a distância entre qualquer localidade</p>
+				This product includes GeoLite2 data created by MaxMind, available from
+				<a href="https://www.maxmind.com">https://www.maxmind.com</a>.
 			</div>
 	  	</div>
 	</div>
