--- a/templates/static/assets/sass/main.scss
+++ b/templates/static/assets/sass/main.scss
@@ -10,7 +10,7 @@ body{
     display: flex;
     min-height: 100vh;
     min-width: 100vw;
-    flex-direction: column
+    flex-direction: column;
 }
 
 main{
