--- a/location/templates/location/base.html
+++ b/location/templates/location/base.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>HowFar?</title>
 	<link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,7 +30,7 @@
 	  	<div class="row">
 			<div class="col l6 s12">
 		  		<h5 class="white-text logo">HowFar?</h5>
-				<p class="grey-text text-lighten-4">Calcule a distância entre qualquer localidade</p>
+				<p class="grey-text text-lighten-4">Calcule a distâcia entre qualquer localidade</p>
 				This product includes GeoLite2 data created by MaxMind, available from
 				<a href="https://www.maxmind.com">https://www.maxmind.com</a>.
 			</div>
